# boids

./: Cargo.toml  build.rs  index.html
assets/: aquarium.blend  aquarium.blend1  fish.blend  scena.blend
res/: aquarium.mtl  fish.mtl
src/: bind_group.rs  boids.rs  camera.rs  camera_controller.rs  graphics.rs  instance.rs  lib.rs  mipmaps.rs  model.rs  resources.rs  texture.rs
src/shaders/: aquarium.wgsl  blit.wgsl  fish.wgsl
