[package]
name = "boids"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
test = false
bench = false

[[bin]]
name = "native"
test = false
bench = false

[dependencies]
env_logger = "0.10.0"
log = "0.4.18"
cgmath = "0.18"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"]}
imgui = "0.11.0"
imgui-winit-support = "0.11.0"
imgui-wgpu = "0.23.0"
wgpu = "0.16"
cfg-if = "1.0.0"
anyhow = "1.0.72"
instant = "0.1"
fps_counter = "2.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
wgpu = { version = "0.17.0", features = ["webgl"]}
web-sys = { version = "0.3", features = ["Document", "Window", "Element"]}
